Subindo o jogo dino do navegador

--- a/pagina-web/index.html
+++ b/pagina-web/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>MeuProjeto</title>
     <img src="" alt="Imagem de título">
+    <link rel="stylesheet" href="stile.css">
 </head>
 <body>
    <header>Fabricio Vieira</header>
